Fix bug where float right on add spot button was causing first listings pic to overlap with its rank.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -551,8 +551,7 @@ input[type='text']:focus {
     }
 
     .add-spot {
-      float: right;
-      margin-top: -55px;
+      margin: -84px 0 0 500px;
     }
 
   }
